# viper

./: .gitignore  :w  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  compile_commands.json  compile_flags.txt  perf.data  perf.data.old  premake5.lua
examples/basic/: CMakeLists.txt  compile_flags.txt  lib  viper
examples/basic/source/: source.c
old/: Makefile  (+2 more)
viper/: CMakeLists.txt  ]  compile_flags.txt
viper/.cache/clangd/index/: allocator.c.78C660B87D5C8280.idx  allocator.h.EDE8F847F69E1E51.idx  allocator.h.FED008D89324F968.idx  application.h.637E197965ED416D.idx  basic.h.90CBD661CEEF3E98.idx  benchmark.c.94770E397556E3A6.idx  benchmark.h.9E2F7A8DA2008F20.idx  benchmark.h.BAA82FED026632B9.idx  buffer.h.3775126EEC930009.idx  commands.h.5BFAFC5C4D8DCA21.idx  config.h.58385FEB42E9E6E0.idx  copy.c.8C50D746A7EE9E09.idx  copy.h.4F158BB49E3A9D9B.idx  cpu.c.7DC7ABF91BB2D272.idx  cpu.h.3476868A7687A09E.idx  cpu.h.859AC5D9E55D3A02.idx  defines.h.F8610148D6239A00.idx  directory.c.29BAF1D46C7FC7FE.idx  directory.h.F08406AB4D267E10.idx  dirent.h.C140756B759FAB77.idx  dlfcn.h.670D976ADC7F62C1.idx  dynamic_array.c.077A4AD0515BCF15.idx  dynamic_array.h.122836A092CAB112.idx  dynamic_array.h.8660A3BF0E324FB1.idx  dynamic_library.h.5EA980ADE937ADCE.idx  dynamic_loading.c.3E17A3ABEB729745.idx  dynamic_loading.h.6CAA4AF2DECE28D4.idx  enums.h.A1DC68193C803E6F.idx  error.c.4C538290140F7C32.idx  error.h.5114469CDFB38230.idx  exceptions.c.9005A2A7AB185790.idx  exceptions.h.191E1182E5DBED6A.idx  exceptions.h.EF613E6E04FFD352.idx  fcntl.h.F7D0E04CB79B34C6.idx  file.c.E4DF461446F6845E.idx  file.h.DC4C82D0200DB833.idx  file.h.EACDC99D8BE051C3.idx  flags.h.D3386C4815269060.idx  foreman.c.B2E44E98D5941FC7.idx  foreman.h.721B1812DDCF14E8.idx  (+63 more)
viper/include/viper/api/: main.h
viper/include/viper/api/image/: image.h
viper/include/viper/api/terminal/: commands.h
viper/include/viper/core/algorithm/: dynamic_array.h  hash.h  hashmap.h  queue.h
viper/include/viper/core/debug/: benchmark.h  exceptions.h  logger.h  signaller.h
viper/include/viper/core/dummy/: hello.h
viper/include/viper/core/file/: config.h  directory.h  dirent.h  file.h  format.h  json.h
viper/include/viper/core/graphics/: glfw.h  opengl.h  window.h
viper/include/viper/core/image/: images.h  jpeg.h  jpeg2k.h
viper/include/viper/core/input/: keyboard.c
viper/include/viper/core/io/: printer.h
viper/include/viper/core/maths/: basic.h  fixed.h  hashes.h  stringer.h
viper/include/viper/core/memory/: allocator.h  utils.h
viper/include/viper/core/networking/: sockets.h
viper/include/viper/core/platform/: cpu.h  dynamic_loading.h  error.h  io.h  limits.h
viper/include/viper/core/string/: copy.h  opengl.h  stringer.h
viper/include/viper/core/terminal/: parser.h
viper/include/viper/core/test/: unit_tests.h
viper/include/viper/core/threading/: foreman.h
viper/include/viper/core/types/: allocator.h  application.h  benchmark.h  buffer.h  cpu.h  defines.h  dynamic_array.h  dynamic_library.h  enums.h  exceptions.h  file.h  fixed.h  flags.h  glfw.h  graphics.h  hashmap.h  image.h  json.h  keyboard.h  logger.h  maths.h  memory.h  networking.h  parser.h  platform.h  queue.h  scene.h  struct.h  terminal.h  threading.h
viper/include/viper/linux/: dirent.h  dlfcn.h  fcntl.h  getopt.h  limits.h  mman.h  sched.h  singal.h  time.h  types.h  unistd.h  wayland.h
viper/include/viper/lua/maths/: hashes.h  stringer.h
viper/include/viper/winux/: dirent.h  dlfcn.h  fcntl.h  getopt.h  mman.h  sched.h  types.h  unistd.h
viper/include/viper_cpp/core/string/: stringer.hpp
viper/shaders/: basic_fragment.glsl  basic_vertex.glsl  block_vertex.glsl
viper/source/api/: main.c
viper/source/api/image/: image.c
viper/source/api/terminal/: commands.c
viper/source/core/algorithm/: dynamic_array.c  hash.c  hashmap.c  queue.c
viper/source/core/debug/: benchmark.c  exceptions.c  logger.c  signaller.c
viper/source/core/dummy/: hello.f95
viper/source/core/file/: config.c  directory.c  dirent.c  file.c  format.c  json.c
viper/source/core/graphics/: glfw.c  opengl.c  window.c
viper/source/core/image/: images.c  jpeg.c  jpeg2k.c
viper/source/core/input/: keyboard.c
viper/source/core/io/: printer.c
viper/source/core/lua/maths/: stringer.c
viper/source/core/maths/: basic.f95  fixed.c  hashes.f95  stringer.c
viper/source/core/memory/: allocator.c  utils.c
viper/source/core/networking/: sockets.c
viper/source/core/platform/: cpu.c  dynamic_loading.c  error.c  io.c
viper/source/core/string/: copy.c  opengl.c  stringer.c
viper/source/core/terminal/: parser.c
viper/source/core/test/: unit_tests.c  unite_tests.c
viper/source/core/threading/: foreman.c
viper/source/linux/: dirent.c  dlfcn.c  fcntl.c  getopt.c  mman.c  sched.c  time.c  unistd.c  wayland.c
viper/source/lua/maths/: hashes.c  stringer.c
viper/source/utest/dummy/: hello.lua
viper/source/utest/maths/hashes/: hash_basic_calc.lua
viper/source/utest/maths/stringer/: atou.lua  itoa.lua  utoa.lua
viper/source/winux/: CMakeLists.txt  dirent.c  dlfcn.c  fcntl.c  getopt.c  limits.h  mman.c  sched.c  unistd.h
(+1352 files in other folders)
